--- a/app/src/main/res/layout/dialog_gem_weight.xml
+++ b/app/src/main/res/layout/dialog_gem_weight.xml
@@ -5,18 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TextView
-        android:id="@+id/tv_label_voucher_number"
+        android:id="@+id/tv_label_gem_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="ဘောင်ချာနံပါတ် :"
+        android:text="ကျောက်ချိန် ဖြည့်ပါ"
         android:textColor="@color/primary_text"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/iv_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/close" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -26,59 +36,55 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@color/primary"
-        android:divider="?android:dividerHorizontal"
         android:orientation="horizontal"
-        android:showDividers="middle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_label_voucher_number">
+        app:layout_constraintTop_toBottomOf="@+id/tv_label_gem_weight">
 
         <TextView
-            android:id="@+id/tv_label_stock_code"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Stock ကုဒ်"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_label_gold_and_gem_weight_gm"
+            android:id="@+id/tv_gem_quantity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.1"
             android:gravity="center"
-            android:text="ရွှေ+ကျောက်အလေးချိန်(gm)"
+            android:text="ကျောက်အလုံးရေ"
             android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_label_take"
+            android:id="@+id/tv_one_gem_weight_gm"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.3"
+            android:layout_weight="1.1"
             android:gravity="center"
-            android:text="ယူမယ်"
+            android:text="1လုံးအလေးချိန်(gm)"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_one_gem_weight_KPY"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="1လုံးအလေးချိန်(KPY)"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_total_weight_KPY"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="စုစုပေါင်းအလေးချိန်(KPY)"
             android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold" />
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_stock_check"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="32dp"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:listitem="@layout/item_stock_check" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_continue"
@@ -97,26 +103,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_label_voucher_number"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_label_voucher_number"
-        app:srcCompat="@drawable/close" />
-
-    <TextView
-        android:id="@+id/tv_voucher_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:textColor="@color/primary_text"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_label_voucher_number"
-        app:layout_constraintStart_toEndOf="@+id/tv_label_voucher_number"
-        app:layout_constraintTop_toTopOf="@+id/tv_label_voucher_number" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:listitem="@layout/item_gem_weight" />
 </androidx.constraintlayout.widget.ConstraintLayout>
