--- a/app/src/main/res/layout/fragment_akouk_sell.xml
+++ b/app/src/main/res/layout/fragment_akouk_sell.xml
@@ -39,38 +39,24 @@
                 android:id="@+id/view2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="200dp"
                 android:background="@color/label_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/linearLayout1" />
+                app:layout_constraintTop_toBottomOf="@+id/rv_akouk_sell" />
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/akoukSellFragment_materialToolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/white"
-                android:elevation="5dp"
-                android:theme="@style/ThemeOverlay.AppCompat.Light"
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/btn_add"
+                style="@android:style/Widget.Button"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/background_btn"
+                android:src="@drawable/plus"
+                app:layout_constraintBottom_toBottomOf="@+id/edit_gold_price"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:navigationIcon="@drawable/icon_back"
-                app:title="အခေါက်အရောင်း"
-                app:titleTextColor="@color/primary">
-
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/btn_add"
-                    style="@android:style/Widget.Button"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="32dp"
-                    android:background="@drawable/background_btn"
-                    android:src="@drawable/plus" />
-
-            </com.google.android.material.appbar.MaterialToolbar>
+                app:layout_constraintTop_toTopOf="@+id/edit_gold_price" />
 
             <TextView
                 android:id="@+id/tv_label_gold_price"
@@ -90,7 +76,7 @@
                 android:layout_width="400dp"
                 android:layout_height="70dp"
                 android:layout_marginStart="64dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="100dp"
                 android:background="@drawable/background_edit_text2"
                 android:ems="10"
                 android:inputType="number"
@@ -99,7 +85,7 @@
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/tv_label_gold_price"
-                app:layout_constraintTop_toBottomOf="@+id/akoukSellFragment_materialToolbar" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/linearLayout1"
@@ -184,6 +170,20 @@
 
             </LinearLayout>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_akouk_sell"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
+                android:orientation="vertical"
+                android:visibility="invisible"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
+                tools:listitem="@layout/item_akouk_sell" />
+
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
@@ -223,7 +223,7 @@
                 android:id="@+id/linearLayout3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
+                android:layout_marginStart="24dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                 app:layout_constraintStart_toEndOf="@+id/linearLayout2"
@@ -253,13 +253,48 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/linearLayoutPoloValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:orientation="vertical"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout3">
+
+                <TextView
+                    android:id="@+id/tv_label_polo_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ပိုလိုတန်ဖိုး"
+                    android:textColor="@color/primary_text"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/edit_polo_value"
+                    android:layout_width="370dp"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/background_edit_text2"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:textColorHint="@color/secondary_text"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
             <ImageButton
                 android:id="@+id/imageBtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
 
                 android:layout_gravity="end"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/background_btn"
                 app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
