--- a/app/src/main/res/layout/fragment_inventory_stock.xml
+++ b/app/src/main/res/layout/fragment_inventory_stock.xml
@@ -5,39 +5,26 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/inventoryStockFragment_materialToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        android:elevation="5dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_take"
+        style="@android:style/Widget.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/background_btn"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
+        android:text="ယူမည်"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_scan_stock_code"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/icon_back"
-        app:title="Sample Take from Inventory"
-        app:titleTextColor="@color/primary">
+        app:layout_constraintTop_toTopOf="@+id/edit_scan_stock_code" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_take"
-            style="@android:style/Widget.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_gravity="end"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/background_btn"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
-            android:text="ယူမည်"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="1042dp"
-            tools:layout_editor_absoluteY="2dp" />
 
-    </com.google.android.material.appbar.MaterialToolbar>
 
     <TextView
         android:id="@+id/tv_label_scan_stock_code"
@@ -57,7 +44,7 @@
         android:layout_width="400dp"
         android:layout_height="70dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/background_edit_text"
         android:ems="10"
         android:hint="Type or Scan"
@@ -68,7 +55,7 @@
         android:textColorHint="@color/label_text"
         android:textSize="22sp"
         app:layout_constraintStart_toEndOf="@+id/tv_label_scan_stock_code"
-        app:layout_constraintTop_toBottomOf="@+id/inventoryStockFragment_materialToolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
