--- a/app/src/main/res/layout/item_general_sell.xml
+++ b/app/src/main/res/layout/item_general_sell.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
@@ -13,13 +15,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <TextView
-            android:id="@+id/tv_item_type"
+            android:id="@+id/tv_group"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.1"
+            android:gravity="center"
+            android:text="Group 1"
+            android:textColor="@color/primary_text"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="အခဲ"
+            android:text="အရောင်တင်"
+            android:textColor="@color/primary_text"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_quantity"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.1"
+            android:gravity="center"
+            android:text="3"
             android:textColor="@color/primary_text"
             android:textSize="22sp"
             android:textStyle="bold" />
@@ -28,20 +53,20 @@
             android:id="@+id/tv_gold_weight"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.1"
             android:gravity="center"
-            android:text="1K 0P 0Y"
+            android:text="4.56 gm"
             android:textColor="@color/primary_text"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_sell_reduce"
+            android:id="@+id/tv_underCount"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="0K 0P 0Y"
+            android:text="0K 0P 1Y"
             android:textColor="@color/primary_text"
             android:textSize="22sp"
             android:textStyle="bold" />
@@ -50,20 +75,9 @@
             android:id="@+id/tv_fee"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.1"
             android:gravity="center"
-            android:text="4,000"
-            android:textColor="@color/primary_text"
-            android:textSize="22sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_nan_htoe_fee"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="4,000"
+            android:text="1,000"
             android:textColor="@color/primary_text"
             android:textSize="22sp"
             android:textStyle="bold" />
@@ -74,7 +88,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="1,000,000"
+            android:text="15,000"
             android:textColor="@color/primary_text"
             android:textSize="22sp"
             android:textStyle="bold" />
