--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,6 +60,9 @@
         <action
             android:id="@+id/action_sellGoldFromHomeFragment_to_sellResellStockInfoAddedFragment"
             app:destination="@id/sellResellStockInfoAddedFragment" />
+        <action
+            android:id="@+id/action_sellGoldFromHomeFragment_to_pawnStartFragment"
+            app:destination="@id/pawnStartFragment" />
     </fragment>
     <fragment
         android:id="@+id/scanStockFragment"
@@ -126,4 +129,43 @@
         android:id="@+id/sellResellStockInfoAddedFragment"
         android:name="com.example.shwemisale.sellModule.SellResellStockInfoAddedFragment"
         android:label="ပြန်သွင်းထည်အချက်အလက်" />
+    <fragment
+        android:id="@+id/pawnStartFragment"
+        android:name="com.example.shwemisale.pawnModule.PawnStartFragment"
+        android:label="ဝယ်သူရှာရန်" >
+        <action
+            android:id="@+id/action_pawnStartFragment_to_pawnCreateNewFragment"
+            app:destination="@id/pawnCreateNewFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/pawnCreateNewFragment"
+        android:name="com.example.shwemisale.pawnModule.PawnCreateNewFragment"
+        android:label="ဝယ်သူအသစ် ပြုလုပ်မည်" >
+        <action
+            android:id="@+id/action_pawnCreateNewFragment_to_pawnCustomerInfoFragment"
+            app:destination="@id/pawnCustomerInfoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/pawnCustomerInfoFragment"
+        android:name="com.example.shwemisale.pawnModule.PawnCustomerInfoFragment"
+        android:label="ဝယ်သူ့အချက်အလက်" >
+        <action
+            android:id="@+id/action_pawnCustomerInfoFragment_to_pawnGoldFromHomeFragment"
+            app:destination="@id/pawnGoldFromHomeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/pawnGoldFromHomeFragment"
+        android:name="com.example.shwemisale.pawnModule.PawnGoldFromHomeFragment"
+        android:label="အိမ်ပါရွှေ" >
+        <action
+            android:id="@+id/action_pawnGoldFromHomeFragment_to_createPawnFragment"
+            app:destination="@id/createPawnFragment" />
+        <action
+            android:id="@+id/action_pawnGoldFromHomeFragment_to_sellStartFragment"
+            app:destination="@id/sellStartFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/createPawnFragment"
+        android:name="com.example.shwemisale.pawnModule.CreatePawnFragment"
+        android:label="အပေါင်ဘောင်ချာ" />
 </navigation>
