change start destination

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/sellStartFragment">
 
     <fragment
         android:id="@+id/loginFragment"
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_sellStartFragment_to_sellCreateNewFragment"
             app:destination="@id/sellCreateNewFragment" />
+        <action
+            android:id="@+id/action_sellStartFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/sellCreateNewFragment"
