--- a/app/src/main/res/layout/dialog_change_feature.xml
+++ b/app/src/main/res/layout/dialog_change_feature.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_label_choose"
@@ -66,14 +66,13 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
         android:background="@drawable/background_btn"
         android:text="အရောင်း"
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_buy"
         app:layout_constraintStart_toStartOf="@+id/btn_buy"
         app:layout_constraintTop_toBottomOf="@+id/btn_buy" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
