--- a/app/src/main/res/layout/dialog_stock_check.xml
+++ b/app/src/main/res/layout/dialog_stock_check.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@color/primary"
-        android:divider="?android:dividerHorizontal"
+        android:divider="@color/white"
         android:orientation="horizontal"
         android:showDividers="middle"
         app:layout_constraintEnd_toEndOf="parent"
