--- a/app/src/main/res/layout/fragment_gold_from_home_pawn_interest.xml
+++ b/app/src/main/res/layout/fragment_gold_from_home_pawn_interest.xml
@@ -86,7 +86,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
             android:background="@color/primary"
-            android:divider="?android:dividerHorizontal"
+            android:divider="@color/white"
             android:orientation="horizontal"
             android:showDividers="middle"
             app:layout_constraintEnd_toEndOf="parent"
