--- a/app/src/main/res/layout/include_search_result.xml
+++ b/app/src/main/res/layout/include_search_result.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:background="@color/primary"
-        android:divider="?android:dividerHorizontal"
+        android:divider="@color/white"
         android:orientation="horizontal"
         android:showDividers="middle">
 
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:divider="?android:dividerHorizontal"
+            android:divider="@color/white"
             android:orientation="horizontal"
             android:showDividers="middle">
 
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.2"
-            android:divider="?android:dividerHorizontal"
+            android:divider="@color/white"
             android:orientation="horizontal"
             android:showDividers="middle">
 
