add xyz material card

--- a/app/src/main/res/layout/fragment_resell_stock_info_added_buy.xml
+++ b/app/src/main/res/layout/fragment_resell_stock_info_added_buy.xml
@@ -667,11 +667,88 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/background_text_view"
+                    android:elevation="3dp">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="#CC535F"
+                        app:shapeAppearanceOverlay="@style/materialCard_x">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingStart="40dp"
+                            android:paddingEnd="40dp"
+                            android:text="x"
+                            android:textColor="@color/white"
+                            android:textSize="22sp"
+                            android:textStyle="bold" />
+                    </com.google.android.material.card.MaterialCardView>
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:layout_width="1dp"
+                        android:layout_height="70dp"
+                        android:background="#FCDEE0"/>
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="#FFF5F5"
+                        app:shapeAppearanceOverlay="@style/materialCard_y">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingStart="40dp"
+                            android:paddingEnd="40dp"
+                            android:text="y"
+                            android:textColor="@color/primary"
+                            android:textSize="22sp"
+                            android:textStyle="bold" />
+                    </com.google.android.material.card.MaterialCardView>
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:layout_width="1dp"
+                        android:layout_height="70dp"
+                        android:background="#FCDEE0"/>
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="#FFF5F5"
+                        app:shapeAppearanceOverlay="@style/materialCard_z">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingStart="40dp"
+                            android:paddingEnd="40dp"
+                            android:text="z"
+                            android:textColor="@color/primary"
+                            android:textSize="22sp"
+                            android:textStyle="bold" />
+                    </com.google.android.material.card.MaterialCardView>
+
+                </LinearLayout>
+
                 <EditText
                     android:id="@+id/edit_repurchase_price"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:background="@drawable/background_edit_text"
                     android:ems="10"
                     android:inputType="number"
